[package]
name = "pganalyze_lint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
pg_query = { version = "*", git = "https://github.com/pganalyze/pg_query.rs", branch = "filter-columns" }
postgres = { version = "0.19.5", features = ["with-serde_json-1"] }
regex = "1.8.3"
serde = "1.0.163"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
